completed first task

--- a/app/layouts/header.scss
+++ b/app/layouts/header.scss
@@ -1,6 +1,6 @@
 
 .header {
-  width: 100%;
+ left: 60px;
   height: 54px;
   position: fixed;
   top: 0;
@@ -24,9 +24,7 @@
  
  font-weight: 600;
   width: fit-content;
-  position: relative;
-  left: 150px;
-  bottom: 40px;
+  padding: 20px;
  
 }
 
