--- a/app/layouts/footer.scss
+++ b/app/layouts/footer.scss
@@ -11,7 +11,8 @@
   
   .footer-content{
     font-size: 12px;
-    margin: 5px 0 7px 800px;
+   justify-content: center;
+   text-align: center;
   color: #607787;
   }
   
