added lint file

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,7 +10,7 @@ body {
 }
 
 
-@import "/Users/sswarnakar/Desktop/fresh-team/app/layouts/leftnav.scss";
+@import '/Users/sswarnakar/Desktop/fresh-team/app/layouts/leftnav.scss';
 @import '/Users/sswarnakar/Desktop/fresh-team/app/layouts/header.scss';
 @import "/Users/sswarnakar/Desktop/fresh-team/app/layouts/footer.scss";
 
