--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,7 +8,7 @@
 
   <header class="header">
     <img class="logo" src="assets/brand-header-logo.png" alt="freshteam logo">
-    <div class="header-title">Talent Center</div>
+    <span class="header-title">Talent Center</span>
   </header>
   
   <main class="content">
@@ -16,8 +16,8 @@
   </main>
 
   <footer class="footer">
-    <span class="footer-content">
+    <p class="footer-content">
       HR Software by Freshworks | Knowledge Base
-    </span>
+    </p>
   </footer>
 </body>
