--- a/app/layouts/footer.scss
+++ b/app/layouts/footer.scss
@@ -1,18 +1,20 @@
+@import "../abstracts/variables.scss";
 .footer {
 
-    width: 100%;
+    left: $sideNavWidth;
     height: 28px;
     background: #FFFFFF; 
     position: absolute;
     bottom: 0;
+    right: 0;
     border: 1px solid #CFD7DF;
     
   }
   
   .footer-content{
     font-size: 12px;
-   justify-content: center;
    text-align: center;
+   margin-top: 5px;
   color: #607787;
   }
   
