--- a/app/layouts/header.scss
+++ b/app/layouts/header.scss
@@ -5,8 +5,8 @@
   position: fixed;
   top: 0;
   right: 0;
-  background: #ffffff;
-  box-shadow: #ebeef0;
+  background: $headerBackground;
+  box-shadow: $headerBoxShadow;
 }
 
 .logo {
@@ -20,7 +20,7 @@
 }
 
 .header-title {
-  color: #41637c;
+  color: $headerTitle #41637c;
  
  font-weight: 600;
   width: fit-content;
@@ -29,5 +29,5 @@
 }
 
 .header-title:hover {
-  text-decoration: underline 1px solid violet;
+  text-decoration: underline 1px solid $headerTitleHover;
 }
