--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,6 +4,14 @@
     <div class="icon-logo-container">
       {{svg-jar "ft" class="icon-logo"}}
     </div>
+
+
+    <div class="emp-logo-container">
+       {{#link-to "users" class="emp-logo-container"}}
+             {{svg-jar "candidates" class="emp-logo"}}
+       {{/link-to}}
+       
+    </div>
   </div>
 
   <header class="header">
@@ -12,7 +20,8 @@
   </header>
   
   <main class="content">
-
+       {{outlet}}
+ 
   </main>
 
   <footer class="footer">
