--- a/app/layouts/leftnav.scss
+++ b/app/layouts/leftnav.scss
@@ -1,8 +1,8 @@
 @import "../abstracts/variables.scss";
 
 .left-nav {
-    width: sideNav;
-    background-color: #12344D;;
+    width: $sideNavWidth;
+    background-color: $leftNavBg;
     position: fixed;
     left: 0;
     top: 0;
@@ -13,8 +13,8 @@
 .icon-logo-container{
     padding: 14px 17px 13px 18px;
    
-    background: #12344D;
-    box-shadow: 0px 1px 0px #41637C, 0px 2px 0px #27303E;
+    background: $leftNavBg;
+    box-shadow: 0px 1px 0px $iconBoxShadow1, 0px 2px 0px $iconBoxShadow2;
     
     }
     
@@ -26,7 +26,17 @@
     }
     
     .icon-logo:hover{
-      border: 1px solid #9210e3;
+      border: 1px solid $iconLogoHover;
     }
-    
-    
+
+   
+
+
+
+
+
+
+
+
+
+
