--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,30 +1,16 @@
 
 @import "ember-bootstrap/bootstrap";
+@import "app/abstracts/variables.scss";
 
 
 body {
   min-height: 100vh;
   position: relative;
   
-  background: #E5E5E5;
+  background: $bodyBackground;
 }
 
 
-@import "app/layouts/leftnav.scss";
+@import 'app/layouts/leftnav.scss';
 @import 'app/layouts/header.scss';
 @import "app/layouts/footer.scss";
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
