added footer colors

--- a/app/abstracts/variables.scss
+++ b/app/abstracts/variables.scss
@@ -20,3 +20,9 @@ $iconBoxShadow1 :#41637C;
 $iconBoxShadow2: #27303E;
 
 $iconLogoHover: #9210e3;
+
+$footerBg: #FFFFFF;
+
+$footerBorder: #CFD7DF;
+
+$footerTextColor: #607787;
