--- a/app/layouts/footer.scss
+++ b/app/layouts/footer.scss
@@ -3,11 +3,11 @@
 
     left: $sideNavWidth;
     height: 28px;
-    background: #FFFFFF; 
+    background: $footerBg; 
     position: absolute;
     right: 0;
     bottom: 0;
-    border: 1px solid #CFD7DF;
+    border: 1px solid $footerBorder;
     
   }
   
@@ -15,7 +15,7 @@
     font-size: 12px;
    justify-content: center;
    text-align: center;
-  color: #607787;
+  color: $footerTextColor;
   padding-top: 5px;
   }
   
