added index route

--- a/app/abstracts/variables.scss
+++ b/app/abstracts/variables.scss
@@ -20,5 +20,11 @@ $iconLogoHover: #9210e3;
 
 $empLogoHover:  #7052CC;
 
-$secHeaderUsers: #F5F7F9
+$secHeaderUsers: #F5F7F9;
+
+$footerBg: #FFFFFF;
+
+$footerBorder: #CFD7DF;
+
+$footerTextColor: #607787;
 
