--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -1,11 +1,21 @@
-.card-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+
+.circle-div{
+    padding: 10px;
+    margin-top: 10px;
+    margin: auto;
+    width: 150px;
+    height: 150px;
+    margin-bottom: 20px;
+    border-radius: 50%;
+  
 }
 
-.card-name{
-    font-size: 14px;
+.avatar{
+width: 100%;
+height: 100%;
+border-radius: 50%
 }
+
 
 
 
