--- a/app/templates/components/user-avatar.hbs
+++ b/app/templates/components/user-avatar.hbs
@@ -23,9 +23,9 @@
 {{else}}
 
   <div class="circle-div"  data-test-id="no-user-avatar" style="background-color:{{this.randomColor}}">
-    <p class="card-text">
+    <span class="card-text">
         {{this.firstChar}}
-    </p>
+    </span>
     
   </div>
 
