--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -4,19 +4,18 @@
 
 
 
-  <div class="card">
+  <div class="cards container">
 
+   {{#user-card user=model.lastObject}}{{/user-card}}
     {{!-- {{#each model as |user|}}
 
       {{#user-avatar name=user.first_name img=user.img_url}}{{/user-avatar}}
 
-      <p>{{user.first_name}} {{user.last_name}}</p>
-      <p>{{user.email}}
 
       </p>
     {{/each}}  --}}
 
-    {{#user-avatar user=model.firstObject}}{{/user-avatar}}
+    
 
   </div>
  
