--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -1,10 +1,9 @@
 
 .circle-div{
-    padding: 10px;
-    margin-top: 10px;
-    margin: auto;
-    width: 150px;
-    height: 150px;
+    padding: 12px;
+   margin-left: 18px;
+    width: 82px;
+    height: 82px;
     margin-bottom: 20px;
     border-radius: 50%;
   
@@ -14,6 +13,27 @@
 width: 100%;
 height: 100%;
 border-radius: 50%
+}
+
+.card{
+
+    background: $footerBg;
+    float: left;
+    width: 220px;
+    padding: 50px 20px;
+    border-radius: 2px;
+    text-align: center;
+}
+
+.card-text{
+    font-weight: 400;
+font-size: 44px;
+line-height: 53px;
+/* identical to box height */
+justify-content: center;
+text-align: center;
+
+color: $footerBg;
 }
 
 
