--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -4,20 +4,15 @@
 
 
 
-  <div class="cards container">
+  
 
-   {{#user-card user=model.lastObject}}{{/user-card}}
-    {{!-- {{#each model as |user|}}
-
-      {{#user-avatar name=user.first_name img=user.img_url}}{{/user-avatar}}
-
-
-      </p>
-    {{/each}}  --}}
+  
+   {{#users-cards model = model style="position: static"}}{{/users-cards}}
+   
 
     
 
-  </div>
+ 
  
 
 
