--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<body class="main">
+<body>
 
   <div class="left-nav">
     <div class="icon-logo-container">
@@ -6,24 +6,20 @@
     </div>
 
     <div class="emp-logo-container">
-       {{#link-to "users" }}  
-             {{svg-jar "candidates" class="emp-logo"}}   
-    
-    {{/link-to}}
-    </div>
-    
+      {{#link-to "users"}}
+        {{svg-jar "candidates" class="emp-logo"}}
+
+      {{/link-to}}
     </div>
 
+  </div>
 
   <header class="header">
-    <img class="logo" src="assets/brand-header-logo.png" alt="freshteam logo">
+    <img class="logo" src="assets/brand-header-logo.png" alt="freshteam logo" />
     <span class="header-title">Talent Center</span>
   </header>
-  
-  <main class="content">
-       {{outlet}}
- 
-  </main>
+
+  {{outlet}}
 
   <footer class="footer">
     <p class="footer-content">
