completed  full assignment

--- a/app/templates/components/user-card.hbs
+++ b/app/templates/components/user-card.hbs
@@ -1,8 +1,4 @@
+{{user-avatar user=user}}
 
-    
-    {{#user-avatar user=user}}{{/user-avatar}}
-
-
-      <strong class="name">{{user.first_name}} {{user.last_name}}</strong>
-      <p class="email">{{user.email}}</p>
-
+<strong class="name">{{user.first_name}} {{user.last_name}}</strong>
+<p class="email">{{user.email}}</p>
