--- a/app/abstracts/variables.scss
+++ b/app/abstracts/variables.scss
@@ -1,6 +1,6 @@
 $sideNavWidth: 60px;
 
-$bodyBackground: #E5E5E5;
+$bodyBackground: #e5e5e5;
 
 $headerBackground: #ffffff;
 
@@ -10,22 +10,29 @@ $headerTitle: #41637c;
 
 $headerTitleHover: violet;
 
-$leftNavBg: #12344D;
+$leftNavBg: #12344d;
 
-$iconBoxShadow1 :#41637C;
+$iconBoxShadow1: #41637c;
 
-$iconBoxShadow2: #27303E;
+$iconBoxShadow2: #27303e;
 
 $iconLogoHover: #9210e3;
 
-$empLogoHover:  #7052CC;
+$empLogoHover: #7052cc;
 
-$secHeaderUsers: #F5F7F9;
+$secHeaderUsers: #f5f7f9;
 
-$footerBg: #FFFFFF;
+$footerBg: #ffffff;
 
-$footerBorder: #CFD7DF;
+$footerBorder: #cfd7df;
 
 $footerTextColor: #607787;
-$filterOtionBg: #EBEFF3;
 
+$filterText: #12344d;
+
+$browseText: #7b8e9f;
+
+$dropdownMenuShadow: rgba(24, 50, 71, 0.2);
+
+$dropdownMenuHoverBg: #ebeff3;
+$filterSelectedBg: #E5F6FF
