--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -1,55 +1,79 @@
 @import "app/abstracts/variables.scss";
 
-.content{
-
-    margin-top: 108px;
-    margin-left: 60px;
-    padding: 9px;
-    border: 1px solid red;
-}
-
-.card-container{
-    display: grid;
-    grid-gap: 18px;
-    grid-template-columns: repeat(auto-fit, minmax(280px, auto));
-   
-}
-
-.card{
-
-    background: $footerBg; 
-    padding: 50px 20px;
-    border-radius: 2px;
-    text-align: center;
-}
-
-.card-text{
-    font-weight: 400;
-font-size: 44px;
-
-color: $footerBg;
-}
-
-.circle-div{
-    
-   margin-left: 50px;
-    width: 82px;
-    height: 82px;
-    margin-bottom: 20px;
-    border-radius: 50%;
+.content {
+  margin-top: 108px;
+  margin-left: 60px;
+  padding: 24px;
   
 }
 
-.avatar{
-width: 100%;
-height: 100%;
-border-radius: 50%
+.functionalities {
+  height: 36px;
+  font-weight: 600;
+  display: flex;
+}
+
+.browse {
+  color: $browseText;
+  font-weight: lighter;
+}
+
+.dropdown a {
+  width: fit-content;
+  color: $filterText;
+  padding-left: 4px;
+}
+.dropdown-menu {
+  width: 212px;
+  border-radius: 4px;
+  box-shadow: 0px 2px 10px $dropdownMenuShadow;
+  padding: 10px;
+}
+
+.dropdown-menu option {
+  height: 30px;
+}
+
+.dropdown-menu option:hover {
+  background-color: $dropdownMenuHoverBg;
+}
+
+.active-bg {
+  background-color: $filterSelectedBg;
 }
 
 
 
+.card-container {
+  display: grid;
+  grid-gap: 18px;
+  grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+}
 
+.card {
+  background: $footerBg;
+  padding: 50px 20px;
+  border-radius: 2px;
+  text-align: center;
+}
 
+.card-text {
+  font-weight: 400;
+  font-size: 44px;
 
+  color: $footerBg;
+}
 
+.circle-div {
+  margin-left: 50px;
+  width: 82px;
+  height: 82px;
+  margin-bottom: 20px;
+  border-radius: 50%;
+}
 
+.avatar {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
