--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -28,18 +28,31 @@
   border-radius: 4px;
   box-shadow: 0px 2px 10px $dropdownMenuShadow;
   padding: 10px;
+  padding-bottom: 0;
 }
-
-.dropdown-menu option {
+.dropdown-menu ul{
+  list-style-type: none;
+  padding: 0;
+}
+.dropdown-menu ul li {
   height: 30px;
+  justify-content: center;
+  padding-left: 5px;
+  
 }
 
-.dropdown-menu option:hover {
+.dropdown-menu li:hover {
   background-color: $dropdownMenuHoverBg;
 }
 
 .active-bg {
   background-color: $filterSelectedBg;
+  svg {
+    width: 10px;
+    height: 20px;
+    margin-left: 45px;
+  }
+  
 }
 
 
