--- a/app/templates/components/users-cards.hbs
+++ b/app/templates/components/users-cards.hbs
@@ -6,17 +6,20 @@
 
       </span></dd.toggle>
     <dd.menu as |ddm|>
+      <ul>
       {{#each this.teams as |team|}}
+     
         {{! write a helper function equal to check if passed selectedTeam is same as team if true add active class }}
-        <option
+        <li
           {{action "selectTeam" team}}
           data-test-id={{team}}
           class={{if (equal-helper selectedTeam team) "active-bg"}}
-        >
+        >{{team}}
           {{#if (equal-helper selectedTeam team)}}
             {{svg-jar "checkbox"}}
-          {{/if}}{{team}}</option>
+          {{/if}}</li>
       {{/each}}
+      </ul>
 
     </dd.menu>
   </BsDropdown>
