--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -25,6 +25,7 @@
 }
 .dropdown-menu {
   width: 212px;
+  font-weight: lighter;
   border-radius: 4px;
   box-shadow: 0px 2px 10px $dropdownMenuShadow;
   padding: 10px;
@@ -37,7 +38,7 @@
 .dropdown-menu ul li {
   height: 30px;
   justify-content: center;
-  padding-left: 5px;
+  padding-left: 10px;
   
 }
 
@@ -47,10 +48,13 @@
 
 .active-bg {
   background-color: $filterSelectedBg;
+  font-weight: 600;
   svg {
     width: 10px;
     height: 20px;
-    margin-left: 45px;
+    position: absolute;
+    right: 23px;
+    top: 13px;
   }
   
 }
@@ -73,7 +77,7 @@
 .card-text {
   font-weight: 400;
   font-size: 44px;
-
+  line-height: 78px;
   color: $footerBg;
 }
 
@@ -83,6 +87,7 @@
   height: 82px;
   margin-bottom: 20px;
   border-radius: 50%;
+  
 }
 
 .avatar {
