--- a/app/templates/components/users-cards.hbs
+++ b/app/templates/components/users-cards.hbs
@@ -71,6 +71,13 @@
 
     </dd.menu>
   </BsDropdown>
+
+   
+   <div class="search">
+     <i class="icon-search"></i>
+     <input type="search" placeholder="Search" />
+   
+ </div>
  
 </div>
 
