--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -104,3 +104,15 @@
   height: 100%;
   border-radius: 50%;
 }
+
+.search {
+  position: absolute;
+  right: 24px;
+  padding: 10px;
+  pointer-events: none;
+  top: 11px;
+}
+
+.search input{
+  width: 400px;
+}
