--- a/app/abstracts/variables.scss
+++ b/app/abstracts/variables.scss
@@ -16,7 +16,7 @@ $iconBoxShadow1: #41637c;
 
 $iconBoxShadow2: #27303e;
 
-$iconLogoHover: #9210e3;
+$iconLogoHover: #7052CC;
 
 $empLogoHover: #7052cc;
 
@@ -35,4 +35,6 @@ $browseText: #7b8e9f;
 $dropdownMenuShadow: rgba(24, 50, 71, 0.2);
 
 $dropdownMenuHoverBg: #ebeff3;
-$filterSelectedBg: #E5F6FF
+$filterSelectedBg: #E5F6FF;
+$searchBorder: #DADEE4;
+$searchColor: #000000;
