--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -3,25 +3,33 @@
 .content {
   margin-top: 108px;
   margin-left: 60px;
-  padding: 24px;
+  padding: 0 24px;
+ 
   
 }
 
 .functionalities {
-  height: 36px;
+  height: 53px;
   font-weight: 600;
   display: flex;
+
 }
 
 .browse {
+  margin-top: 16px;
   color: $browseText;
   font-weight: lighter;
 }
 
 .dropdown a {
+  
   width: fit-content;
   color: $filterText;
   padding-left: 4px;
+}
+
+.dropdown{
+  padding-top: 16px;
 }
 .dropdown-menu {
   width: 212px;
@@ -48,7 +56,7 @@
 }
 
 .active-bg {
-  background-color: $filterSelectedBg;
+ 
   font-weight: 600;
   svg {
     width: 10px;
@@ -56,6 +64,7 @@
     position: absolute;
     right: 12px;
     top: 5px;
+   
   }
   
 }
@@ -64,16 +73,20 @@
   color: $browseText;
   font-weight: lighter;
    margin-left: 79px;
-  
+   margin-top: 16px;
   
 }
 
 
 
+
 .card-container {
+  width: 100%;
   display: grid;
   grid-gap: 18px;
-  grid-template-columns: repeat(auto-fit, minmax(280px, auto));
+  grid-template-columns: repeat(5, 1fr);
+  margin-right: 24px;
+  
 }
 
 .card {
@@ -81,6 +94,7 @@
   padding: 50px 20px;
   border-radius: 2px;
   text-align: center;
+  max-width: 400px;
 }
 
 .card-text {
@@ -96,6 +110,8 @@
   height: 82px;
   margin-bottom: 20px;
   border-radius: 50%;
+  text-align: center;
+  justify-content: center;
   
 }
 
@@ -108,11 +124,23 @@
 .search {
   position: absolute;
   right: 24px;
-  padding: 10px;
-  pointer-events: none;
+  width: 400px;
   top: 11px;
+  border: 1px solid $searchBorder;
+border-radius: 2px;
+padding-left: 30px;
 }
 
-.search input{
-  width: 400px;
+.search-icon{
+  position: absolute;
+  top: 18px;
+  z-index: 1;
+  right: 402px;
+  color: $searchColor;
+  width: 13px;
+  height: 13px;
 }
+
+
+
+
