--- a/app/abstracts/variables.scss
+++ b/app/abstracts/variables.scss
@@ -38,3 +38,4 @@ $dropdownMenuHoverBg: #ebeff3;
 $filterSelectedBg: #E5F6FF;
 $searchBorder: #DADEE4;
 $searchColor: #000000;
+$selectedActiveBg: #E5F6FF;
