--- a/app/pages/users.scss
+++ b/app/pages/users.scss
@@ -144,6 +144,15 @@ padding-left: 30px;
   background-color: $selectedActiveBg;
 }
 
+.name{
+  font-weight: 600;
+  font-size: 14px;
+}
+.email{
+  font-size: 12px;
+  color: $nameColor;
+}
+
 
 
 
