--- a/app/styles/abstracts/variables.scss
+++ b/app/styles/abstracts/variables.scss
@@ -40,3 +40,10 @@ $searchBorder: #DADEE4;
 $searchColor: #000000;
 $selectedActiveBg: #E5F6FF;
 $nameColor : #576C7D;
+$notFoundText1Color:#475867;
+$slideBoxShadow: rgba(24, 50, 71, 0.2);
+$starColor: red;
+$applyButtonColor: #264966;
+$userInputFocus: #2C5CC5;
+$circleBg: grey
+
