--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,7 @@
 
     <div class="emp-logo-container">
       {{#link-to "users"}}
-        {{svg-jar "candidates" class="emp-logo"}}
+         {{svg-jar "directory"}}
 
       {{/link-to}}
     </div>
