--- a/app/styles/pages/users.scss
+++ b/app/styles/pages/users.scss
@@ -1,4 +1,8 @@
-@import "app/abstracts/variables.scss";
+@import "app/styles/abstracts/variables.scss";
+@import "app/styles/pages/slideaddemp.scss";
+@import "app/styles/layouts/usersecheader.scss";
+@import "app/styles/components/buttons.scss";
+
 
 .content {
   margin-top: 108px;
@@ -15,77 +19,22 @@
 
 }
 
-.browse {
-  margin-top: 16px;
-  color: $browseText;
-  font-weight: lighter;
-}
-
-.dropdown a {
-  
-  width: fit-content;
-  color: $filterText;
-  padding-left: 4px;
-}
-
-.dropdown{
-  padding-top: 16px;
-}
-.dropdown-menu {
-  width: 212px;
-  font-weight: lighter;
-  border-radius: 4px;
-  box-shadow: 0px 2px 10px $dropdownMenuShadow;
-  padding: 10px;
-  padding-bottom: 0;
-}
-.dropdown-menu ul{
-  list-style-type: none;
-  padding: 0;
-}
-.dropdown-menu ul li {
-  height: 30px;
-  justify-content: center;
-  padding-left: 10px;
-  position: relative;
-  
-}
-
-.dropdown-menu li:hover {
-  background-color: $dropdownMenuHoverBg;
-}
-
-.active-bg {
- 
-  font-weight: 600;
-  svg {
-    width: 10px;
-    height: 20px;
-    position: absolute;
-    right: 12px;
-    top: 5px;
-   
-  }
-  
-}
-
-.sort{
-  color: $browseText;
-  font-weight: lighter;
-   margin-left: 79px;
-   margin-top: 16px;
-  
-}
 
 
-
-
-.card-container {
+.found-card-container {
   width: 100%;
   display: grid;
   grid-gap: 18px;
   grid-template-columns: repeat(5, 1fr);
   margin-right: 24px;
+  
+}
+
+.not-found-card-container{
+  width: 100%;
+  text-align: center;
+  justify-content: center;
+  padding-top: 202px; 
   
 }
 
@@ -112,6 +61,7 @@
   border-radius: 50%;
   text-align: center;
   justify-content: center;
+
   
 }
 
@@ -152,6 +102,25 @@ padding-left: 30px;
   font-size: 12px;
   color: $nameColor;
 }
+
+.not-found-text-1{
+  font-weight: 600;
+  font-size: 16px;
+  color: $notFoundText1Color;
+}
+
+.not-found-text-2{
+  font-weight: 400;
+  font-size: 14px;
+  color: $notFoundText1Color;
+}
+
+.not-found-icon{
+  width: 93px;
+  height: 75px;
+  opacity: 0.5;
+}
+
 
 
 
