--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -1,8 +1,10 @@
 <div class="sec-header">
   <p class="emp-title">Employees</p>
-</div>
+ {{#link-to "users.new" }}<button class="add-user-button">Add Employees</button>{{/link-to}}
 
-   {{#users-cards model = model style="position: static"}}{{/users-cards}}
+</div> 
+   {{outlet}}
+   {{#users-cards model = model}}{{/users-cards}}
    
 
     
