updated user form

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,6 @@
 @import "ember-bootstrap/bootstrap";
 @import "app/styles/abstracts/variables.scss";
+@import 'ember-power-select';
 
 body {
   min-height: 90vh;
