--- a/app/templates/components/user-form.hbs
+++ b/app/templates/components/user-form.hbs
@@ -13,15 +13,15 @@
 
 <form>
 
+
   {{#if userData.img_url}}
     <div class="circle">
-
-      <img src={{userData.img_url}} />
+      <img class="avatar" src=""/>
     </div>
   {{else}}
     <div class="circle">
       {{svg-jar "avatar-loading"}}
-      {{input type="file" id="image" value=userData.img_url class="upload"}}
+      <input class="upload" onchange={{action "setAvatar"}}  type="file"/>
     </div>
   {{/if}}
 
@@ -83,8 +83,8 @@
       {{#power-select
         class="user-input"
         options=teams
-        selected=selectedTeam
-        onchange=(action "chooseTeam" userData.team)
+        selected= userData.team
+        onchange=(action "chooseTeam")
         as |name|
       }}
         {{name}}
