--- a/app/styles/abstracts/variables.scss
+++ b/app/styles/abstracts/variables.scss
@@ -45,5 +45,5 @@ $slideBoxShadow: rgba(24, 50, 71, 0.2);
 $starColor: red;
 $applyButtonColor: #264966;
 $userInputFocus: #2C5CC5;
-$circleBg: grey
+$circleBg: rgb(202, 199, 199)
 
