--- a/app/templates/components/user-form.hbs
+++ b/app/templates/components/user-form.hbs
@@ -16,7 +16,7 @@
 
   {{#if userData.img_url}}
     <div class="circle">
-      <img class="avatar" src=""/>
+       <img class="choose-avatar" src=""/>
     </div>
   {{else}}
     <div class="circle">
