--- a/app/styles/pages/slideaddemp.scss
+++ b/app/styles/pages/slideaddemp.scss
@@ -106,14 +106,20 @@ color: $filterText;
     border-radius: 50%;
     background-color: $circleBg;
    text-align: center;
-   padding-top: 20px;
-   opacity: 0.5;
    margin: 26px 670px 16px 24px;
     svg{
         fill: $footerBg;
         width: 60%;
+        margin-top: 15px;
 
     }
+}
+
+.choose-avatar{
+  width:  100%;
+  height: 100%;
+  border-radius: 50%;
+  
 }
 
 .circle {
@@ -128,17 +134,13 @@ color: $filterText;
     top: 0;
     right: 0;
     margin: 0;
-    padding: 0;
     font-size: 80px;
     cursor: pointer;
-    opacity: 0;
+    
     filter: alpha(opacity=0);
 }
 
-  #ember-basic-dropdown-wormhole{
-    z-index: 5;
-    border: 1px solid black
-  }
+  
 
 
   
