--- a/app/styles/pages/slideaddemp.scss
+++ b/app/styles/pages/slideaddemp.scss
@@ -140,6 +140,23 @@ color: $filterText;
     filter: alpha(opacity=0);
 }
 
+
+// .slide-add-emp-div.open {
+//   transform: translateX(0px);
+// }
+// .slide-add-emp-div {
+//   transition: transform 1s linear;
+//   transform: translateX(100%);
+//   position: fixed;
+//   z-index: 1;
+
+//   right: 0;
+//   top: 0;
+//   width: 50%;
+//   height: 100%;
+//   overflow: auto;
+//   background-color: white;
+// }
   
 
 
