added delete style

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,4 @@
-<body class="body">
+<body>
 
   <div class="left-nav">
     <div class="icon-logo-container">
@@ -19,7 +19,9 @@
     <span class="header-title">Talent Center</span>
   </header>
 
-  {{outlet}}
+  
+
+  {{outlet}} 
 
   <footer class="footer">
     <p class="footer-content">
