--- a/app/styles/components/buttons.scss
+++ b/app/styles/components/buttons.scss
@@ -29,49 +29,15 @@
     top: 17px;
     height: 15px;
     position: absolute;
-    right: 60px;
+    
     fill: #12344d;
   }
-  img:nth-child(2) {
+  a:nth-child(2) {
     width: 13px;
     height: 15px;
     position: absolute;
-    right: 20px;
-    top: 17px;
+    top: 0;
+    right: 16px;
     color: #12344d;
   }
-}
-
-.pop-up {
- 
-  width: 604px;
-  height: 86px;
-  z-index: 1;
-  top: 50%;
-  left: 40%;
-  background: #ffffff;
-  box-shadow: 0px 2px 20px rgba(24, 50, 71, 0.2);
-  position: fixed;
-  font-weight: 400;
-  font-size: 14px;
-
-  svg {
-    width: 30px;
-    height: 30px;
-  }
-}
-
-.confirm {
-  color: #ffffff;
-  display: inline-block;
-  background-color: #264966;
-  border-radius: 2px;
-  padding: 6px 12px;
-}
-
-.del-buttons {
-  margin-bottom: 24px;
-  position: absolute;
-  top: 24px;
-  right: 34px;
 }
