--- a/app/templates/components/user-form.hbs
+++ b/app/templates/components/user-form.hbs
@@ -1,28 +1,30 @@
 <div class="add-user-header">
   {{#link-to "users"}}
-    <span class="cancel">X</span>
+  <span class="cancel" onclick={{action "discardJunk" userData}}>X</span>
   {{/link-to}}
 
   <div class="add-user-title">Add Employee</div>
   {{#link-to "users" class="reset"}}
-    <span>Cancel</span>
+  <span onclick={{action "discardJunk" userData}}>Cancel</span>
+  {{/link-to}}
+  {{#link-to "users"}}
+  <button class="apply" {{action "save" userData}}>Apply</button>
   {{/link-to}}
 
-  <button class="apply" {{action "save" userData}}>Apply</button>
 </div>
 
 <form>
 
 
   {{#if userData.img_url}}
-    <div class="circle">
-       <img class="choose-avatar" src="{{userData.img_url}}"/>
-    </div>
+  <div class="circle">
+    <img class="choose-avatar" src="{{userData.img_url}}" />
+  </div>
   {{else}}
-    <div class="circle">
-      {{svg-jar "avatar-loading"}}
-      <input required class="upload" id="imgFile" onchange={{action "setAvatar"}}  type="file"/>
-    </div>
+  <div class="circle">
+    {{svg-jar "avatar-loading"}}
+    <input class="upload" id="imgFile" onchange={{action "setAvatar" }} type="file" />
+  </div>
   {{/if}}
 
   <div class="add-user-body-div">
@@ -30,72 +32,109 @@
 
       <div class="label-tag important">First Name</div>
       {{input
-        type="text"
-        class="user-input"
-        id="firstName"
-        required="true"
-        value=userData.first_name
+      type="text"
+      class="user-input"
+      id="firstName"
+      value=userData.first_name
+      focus-out=(action (mut showFirstNameError) true)
       }}
+
+      {{#if showFirstNameError}}
+
+      <div class="error">
+        {{v-get userData 'first_name' 'message'}}
+      </div>
+
+
+      {{/if}}
 
       <div class="label-tag important">Email</div>
       {{input
-        type="text"
-        class="user-input"
-        id="email"
-        required="true"
-        value=userData.email
+      type="text"
+      class="user-input"
+      id="email"
+      value=userData.email
+      focus-out=(action (mut showEmailError) true)
       }}
+      {{#if showEmailError}}
+      <div class="error">
+        {{v-get userData 'email' 'message'}}
+
+      </div>
+      {{/if}}
 
       <div class="label-tag">Designation</div>
       {{input
-        type="text"
-        class="user-input"
-        id="design"
-        required="true"
-        value=userData.designation
+      type="text"
+      class="user-input"
+      id="design"
+      focus-out=(action (mut showDesignationError) true)
+      value=userData.designation
       }}
 
+      {{#if showDesignationError}}
+      <div class="error">
+        {{v-get userData 'designation' 'message'}}
+
+      </div>
+      {{/if}}
+
     </div>
+
 
     <div>
 
       <div class="label-tag important">Last Name</div>
       {{input
-        type="text"
-        class="user-input"
-        id="lastName"
-        required="true"
-        value=userData.last_name
+      type="text"
+      class="user-input"
+      id="lastName"
+      value=userData.last_name
+      focus-out=(action (mut showLastNameError) true)
       }}
+
+      {{#if showLastNameError}}
+      <div class="error">
+        {{v-get userData 'last_name' 'message'}}
+
+      </div>
+      {{/if}}
 
       <div class="label-tag">Date of joining</div>
-    {{bootstrap-datepicker
-        class="user-input"
-        value=userData.joiningDate
-        autoclose=true
-        calendarWeeks=true
-        format="dd.mm.yy"
-        keyboardNavigation= true
-        id="date"
-      }} 
+      {{bootstrap-datepicker
+      class="user-input"
+      value=userData.joiningDate
+      autoclose=true
+      format="dd.mm.yy"
+      id="date"
+      focus-out=(action (mut showJoiningDateError) true)
+      }}
+      {{#if showJoiningDateError}}
+      <div class="error">
+        {{v-get userData 'joiningDate' 'message'}}
 
-       
+      </div>
+      {{/if}}
+
 
       <div class="label-tag">Team</div>
-      {{!-- {{svg-jar "search" class="search-icon"}} --}}
+      {{svg-jar "search" class="search-icon"}}
+
       {{#power-select
-        triggerClass="user-input"
-        options=teams
-        selected= userData.team
-        onchange=(action "chooseTeam")
-        as |name|
-        
+
+      triggerClass="user-input"
+      options=teams
+      required="true"
+      selected= userData.team
+      onchange=(action "chooseTeam")
+      as |name|
+
       }}
-       {{!-- {{#if (equal-helper userData.team name)}}
-              {{svg-jar "checkbox"}}
-              
-            {{/if}} --}}
-        {{name}}
+      {{#if (equal-helper userData.team name)}}
+      {{svg-jar "checkbox"}}
+
+      {{/if}}
+      {{name}}
       {{/power-select}}
 
     </div>
