--- a/app/templates/components/users-cards.hbs
+++ b/app/templates/components/users-cards.hbs
@@ -80,14 +80,16 @@
 
 </div>
 
-{{!-- {{log 'searched array:' this.searchedArray}} --}}
+ {{log ' array:' this.validUsers}} 
 
-{{#if this.activeUsers}}
+{{#if this.validUsers}}
   <div class="found-card-container">
-    {{#each this.activeUsers as |user|}}
+    {{#each this.validUsers as |user|}}
 
-      {{#user-card user=user isdeleted = this.isdeleted}}{{/user-card}}
-
+       {{#if (not user.isNew)}}
+       {{log (concat "mylogs " user)}}
+      {{#user-card user=user }}{{/user-card}}
+       {{/if}}
     {{/each}}
   </div>
 {{else}}
@@ -99,3 +101,4 @@
   </div>
 
 {{/if}}
+
