--- a/app/templates/users.hbs
+++ b/app/templates/users.hbs
@@ -1,10 +1,12 @@
 <div class="sec-header">
   <p class="emp-title">Employees</p>
  {{#link-to "users.new" }}<button class="add-user-button">Add Employees</button>{{/link-to}}
-
 </div> 
-   {{outlet}}
-   {{#users-cards model=model}}{{/users-cards}}
+{{!-- {{#user-filter users=model as |filteredUsers|}}
+ 
+{{/user-filter}} --}}
+ {{users-cards model=model}}
+{{outlet}}
    
 
     
